# mysz-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: compiler.rs  lib.rs  main.rs  main_helper.rs  tmp.rs
src/backend/: clback.rs  mod.rs
src/backend/codegen/: mod.rs
src/backend/codegen/nasm/: mod.rs
src/ir/: ir.rs  irgen.rs  mod.rs  tac.rs
src/lex/: lexer.rs  mod.rs
src/lexing/: lex.rs  lexer.rs  lexing.rs  mod.rs  tokens.rs
src/parse/: ast.rs  mod.rs  parse.rs  parser.rs  parsing.rs
src/semantics/: analyser.rs  analysis.rs  mod.rs
src/utils/: location.rs  mod.rs  toident.rs  typesafe.rs
