[package]
name = "mysz-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
cranelift = "0.105.0"
cranelift-codegen = "0.105.0"
cranelift-frontend = "0.105.0"
cranelift-module = "0.105.0"
cranelift-object = "0.105.0"
cranelift-native = "0.105.0"
target-lexicon = "0.12"
regex = "1.10"
serde = "1.0.228"
serde_json = "1.0.150"
serde_derive = "1.0.228"
